kubernetes/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tessa-backend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: tessa-backend
